fixed off center theme switch button on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -284,9 +284,11 @@ h4 {
     text-align: center;
     margin-right: 0;
   }
-  #themeSwitch {
+  #themeSwitchContainer {
     text-align: center;
-    margin-left: 0%;
+  }
+  #themeSwitch {
+    margin-right: 0;
   }
   #projects h3 {
     font-size: 1.5em;
